# slack-message-component

./: .gitignore  Cargo.toml  README.md  edgee-component.toml
.github/workflows/: check.yml  wasm-build-release.yml
public/: error.html  index.html
src/: helpers.rs  lib.rs  world.rs
src/helpers/: body.rs  extensions.rs  mod.rs
