[package]
name = "example-rust-edge-function-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
wit-bindgen = "0.41.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waki = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
