[package]
name = "slack-message-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
waki = "0.5.1"
wit-bindgen = "0.43.0"


[dev-dependencies]
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
